feature : Adding Clipboard Events and other generic events

--- a/JavaScript/Document Object Model/5) DOM - Event Handling.html
+++ b/JavaScript/Document Object Model/5) DOM - Event Handling.html
@@ -228,7 +228,7 @@
     <p id="cutText"></p>
 
     <h2>The <q><strong>onpaste</strong></q> Event :-</h2>
-    <input type="text" placeholder="Paste Something into this field" size="40" onpaste="pasteFunction(this)">
+    <input type="text" placeholder="Paste Something into this field" size="40q" onpaste="pasteFunction(this)">
     <p id="pasteText"></p>
 
 
